# helix-backup

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
config/: default.yaml
docs/: api_reference.md  architecture.md  configuration.md  deployment.md  development.md  performance.md  security.md
examples/: advanced_config.yaml  basic_usage.sh
src/: lib.rs  main.rs
src/backup/: engine.rs  full.rs  incremental.rs
src/block/: device.rs  hasher.rs  mapper.rs  mod.rs
src/cli/: commands.rs  parser.rs
src/config/: loader.rs  mod.rs  validator.rs
src/crypto/: compression.rs  encryption.rs  mod.rs
src/repository/: index.rs  layout.rs  manifest.rs  mod.rs
src/restore/: engine.rs  full.rs  incremental.rs  mod.rs
src/tracker/: bitmap.rs  mod.rs  sqlite_store.rs
src/tracker/linux/: mod.rs
src/tracker/macos/: mod.rs
src/utils/: errors.rs  logger.rs  mod.rs  progress.rs
